// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`canonical frontend configuration types > includes explicit inactive configuration and monitor automation mode 1`] = `
{
  "automation_mode": "parallel",
  "conditions": {
    "enabled": true,
    "interval": 43200,
    "items": [],
    "periodic": false,
    "startup": false,
  },
  "inactive": {
    "clear_notification": false,
    "enabled": false,
    "items": [],
  },
  "triggers": {
    "enabled": true,
    "items": [],
  },
}
`;

exports[`canonical frontend configuration types > snapshots the canonical versioned alert contract 1`] = `
{
  "alerts": [
    {
      "enabled": true,
      "id": "door",
      "monitor": {
        "automation_mode": "parallel",
        "conditions": {
          "enabled": true,
          "items": [
            {
              "condition": "and",
              "conditions": [
                {
                  "condition": "state",
                },
              ],
            },
            {
              "condition": "template",
              "value_template": "{{ is_state(...) }}",
            },
            {
              "condition": "device",
              "device_id": "front-door",
            },
          ],
          "periodic": false,
          "startup": false,
        },
        "inactive": {
          "clear_notification": false,
          "enabled": false,
          "items": [],
        },
        "triggers": {
          "enabled": true,
          "items": [
            {
              "event": "start",
              "trigger": "homeassistant",
            },
          ],
        },
      },
      "name": "Front door",
      "notification": {
        "action": "notify.mobile_app_phone",
        "data": {
          "message": "Open",
        },
        "target": {
          "entity_id": [
            "notify.phone",
          ],
        },
      },
    },
  ],
  "version": 1,
}
`;
